add tasks; add clerk validation with api gateway; refactor restify to receive the header and use user id
