# apps/restify/cmd/docs/swagger.json
@@ -24,6 +24,13 @@
                 "summary": "Create a restaurant",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "User ID from Clerk JWT",
+                        "name": "x-user",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Restaurant data",
                         "name": "data",
                         "in": "body",
@@ -51,7 +58,6 @@
                 "coordinate_y",
                 "name",
                 "open_time",
-                "user_id",
                 "work_days"
             ],
             "properties": {
