# apps/restify/internal/infrastructure/handler/create_restaurant.go
@@ -15,7 +15,7 @@ type (
 		usecase usecase.CreateRestaurantUseCase
 	}
 	payloadDto struct {
-		UserID      string   `json:"user_id"      example:"01953aa5-7d18-7781-bf1c-f425606b565f" validate:"required"`
+		UserID      string   `json:"user_id"      example:"01953aa5-7d18-7781-bf1c-f425606b565f"`
 		Name        string   `json:"name"         example:"Restaurant XYZ"                       validate:"required"`
 		Address     string   `json:"address"      example:"3598 Pringle Drive"                   validate:"required"`
 		CoordinateX float64  `json:"coordinate_x" example:"-21.74568"                            validate:"required"`
@@ -34,17 +34,20 @@ type (
 //	@Accept			json
 //	@Success		201
 //	@Router			/api/v1/restaurants/ [post]
+//	@Param			x-user header string true "User ID from Clerk JWT"
 //	@Param			data	body	payloadDto	true	"Restaurant data"
 func (h *CreateRestaurantHandler) Handle(c *fiber.Ctx) error {
 	_, span := t.Start(c.Context(), "create_restaurant")
 	defer span.End()
 	payload := &payloadDto{}
 	if err := c.BodyParser(&payload); err != nil {
-		log.Error(err.Error())
-		return err
+		log.Error("Failed parsing request body: ", err.Error())
+		return fiber.NewError(fiber.StatusBadRequest, err.Error())
 	}
+	payload.UserID = c.Get("x-user")
 	validatedData := NewHandlerValidator().Validate(payload)
 	if err := validatedData.HasError(); err {
+		log.Error(validatedData.ToFiber().Error())
 		return validatedData.ToFiber()
 	}
 	err := h.usecase.Execute(c.Context(), *usecase.NewCreateRestaurantInputDto(
@@ -52,7 +55,7 @@ func (h *CreateRestaurantHandler) Handle(c *fiber.Ctx) error {
 	))
 	if err != nil {
 		// TODO: Add specific error handling
-		return fiber.NewError(fiber.StatusBadGateway, err.Error())
+		return fiber.NewError(fiber.StatusInternalServerError, err.Error())
 	}
 	return c.SendStatus(201)
 }
